navbar mobile fixed hover cursor for fullscreen

--- a/src/components/atoms/switchModeBtn.scss
+++ b/src/components/atoms/switchModeBtn.scss
@@ -11,7 +11,7 @@
     left: calc(50% - 30px);
     justify-self: center;
     align-self: center;
-    margin-bottom: 5px;
+    margin: 10px 0;
 }
 
 .toggle-slider {
