--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -78,11 +78,11 @@
         }
     }
     &__image {
-        top: 0;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translateX(-50%) translateY(-50%);
         position: absolute;
-        margin: 30px auto;
+        margin: 0;
         max-height: 100%;
         max-width: 500px;
         object-fit: fill;
@@ -92,18 +92,15 @@
             cursor: url('../../assets/icons/cursor/fullscreen.png'), auto;
         }
         &-center {
-            top: -25px;
             opacity: 1;
             z-index: 2;
         }
         &-previous {
-            top: 0;
             left: 0;
             transform: translateX(-50%) scale(0.4);
             opacity: 0.5;
         }
         &-next {
-            top: 0;
             left: 100%;
             transform: translateX(-50%) scale(0.4);
             opacity: 0.5;
@@ -143,9 +140,10 @@
             }
             .article__image {
                 position: absolute;
-                top: 0;
+                top: 50%;
                 left: 50%;
-                transform: translateX(-50%);
+                transform: translateX(-50%) translateY(-50%);
+                margin: 0;
                 max-height: 90%;
                 max-width: 90%;
                 object-fit: fill;
@@ -198,12 +196,12 @@
                 z-index: 5;
             }
             .carousel-button.left {
-                left: 10px;
+                left: 20px;
                 transform: scale(3);
             }
 
             .carousel-button.right {
-                right: 10px;
+                right: 20px;
                 transform: scale(3);
             }
             .modal-close-btn {
