--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -57,7 +57,7 @@
         .carousel-button {
             position: absolute;
             top: 50%;
-            transform: translateY(-50%);
+            transform: translateY(50%);
             background-color: rgba(0, 0, 0, 0.5);
             color: white;
             border: none;
@@ -185,7 +185,7 @@
             }
             .carousel-button {
                 position: absolute;
-                bottom: 50%;
+                top: 50%;
                 transform: translateY(-50%);
                 background-color: rgba(0, 0, 0, 0.5);
                 color: white;
