--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -40,12 +40,14 @@
         flex-direction: row;
         justify-self: center;
         align-items: center;
-        margin-top: 20px;
-        height: 250px;
+        box-sizing: border-box;
+        height: 350px;
         width: 80%;
         overflow: hidden;
         margin: 0 auto;
-
+        margin-top: 20px;
+        padding: 20px 0;
+        background: $primary-bg-color-light;
         video {
             display: flex;
             justify-self: center;
@@ -56,9 +58,8 @@
         }
         .carousel-button {
             position: absolute;
-            top: 50%;
-            transform: translateY(50%);
-            background-color: rgba(0, 0, 0, 0.5);
+            transform: translateY(-50%);
+            background-color: $primary-bg-color-dark;
             color: white;
             border: none;
             padding: 10px;
@@ -67,12 +68,12 @@
         }
 
         .carousel-button.left {
-            left: 0;
+            left: 10px;
             transform: scale(2);
         }
 
         .carousel-button.right {
-            right: 0;
+            right: 10px;
             transform: scale(2);
         }
     }
@@ -82,7 +83,7 @@
         transform: translateX(-50%) translateY(-50%);
         position: absolute;
         margin: 0;
-        max-height: 100%;
+        max-height: 90%;
         max-width: 500px;
         object-fit: fill;
         transition: all 0.3s ease-in;
@@ -105,7 +106,7 @@
             opacity: 0.5;
         }
         &-unselected {
-            bottom: -400%;
+            top: 400%;
             opacity: 0;
         }
         &-modal {
@@ -163,7 +164,7 @@
                     opacity: 0.5;
                 }
                 &-unselected {
-                    bottom: -400%;
+                    top: 300%;
                     opacity: 0;
                 }
                 &:hover {
@@ -209,6 +210,8 @@
                 top: -20px;
                 right: -20px;
                 z-index: 5;
+                background-color: white;
+                border-radius: 50%;
             }
             .fa-circle-xmark {
                 width: 40px;
