z-index mobile nav

--- a/src/components/molecules/navbar.scss
+++ b/src/components/molecules/navbar.scss
@@ -16,6 +16,7 @@
         align-items: center;
         min-height: 58px;
         padding: 20px 0;
+        z-index: 2;
         line-height: 24px;
         text-align: center;
     }
