btn target blank

--- a/src/components/atoms/soundcloudBtn.scss
+++ b/src/components/atoms/soundcloudBtn.scss
@@ -1,6 +1,6 @@
 @import '../../assets/variables.scss';
 
-.discover-btn {
+#discover-btn {
     display: flex;
     justify-content: center;
     align-items: center;
