--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -210,6 +210,7 @@
                 top: -20px;
                 right: -20px;
                 z-index: 5;
+                color: $primary-bg-color;
                 background-color: white;
                 border-radius: 50%;
             }
