--- a/src/components/atoms/scrolledBanner.scss
+++ b/src/components/atoms/scrolledBanner.scss
@@ -13,7 +13,7 @@
 }
 .banner {
     &-dark {
-        background: $primary-bg-color;
+        background: none;
         color: white;
     }
     &-light {
