--- a/src/index.scss
+++ b/src/index.scss
@@ -140,7 +140,13 @@ table {
 }
 
 body {
-    background: #272727;
+    background: $primary-bg-color;
+    background-image: url('./assets/videos/blue-waves.gif');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: top center;
+    background-blend-mode: darken;
     font-family: Comfortaa;
     color: white;
     height: 100vh;
@@ -162,12 +168,6 @@ body {
 
 a {
     color: white;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
 }
 
 footer {
@@ -247,17 +247,6 @@ a {
         padding-top: 40px;
         padding-left: 100px;
         padding-right: 100px;
-    }
-}
-
-@include mobileQ {
-    header {
-        position: fixed;
-        top: 0;
-        z-index: 8;
-        width: 100%;
-        background: $primary-bg-color;
-        color: white;
     }
 
     .light {
