--- a/src/index.scss
+++ b/src/index.scss
@@ -141,7 +141,7 @@ table {
 
 body {
     background: $primary-bg-color;
-    background-image: url('./assets/videos/blue-waves.gif');
+    background-image: url('./assets/videos/blue-waves.mp4');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -264,7 +264,7 @@ a {
         }
     }
     .main-container {
-        margin-top: 164px;
+        margin-top: 70px;
     }
     .page {
         padding-top: 40px;
