--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -7,27 +7,13 @@ header {
     position: relative;
 }
 
-.background-animation {
+.mobile-logo-replacer {
+    display: block;
     position: absolute;
-    z-index: -5;
-    display: none;
-    background-image: url('../../assets/videos/3.gif');
-    background-blend-mode: exclusion;
-    width: auto;
-    height: auto;
-    transform: translate(-50%);
-    top: 150%;
-    animation: blobby ease-in-out 10000ms infinite;
-
-    &--left {
-        left: 0%;
-        animation-delay: 4000ms;
-        transform-origin: left;
-    }
-    &--right {
-        left: 100%;
-        transform-origin: left;
-    }
+    top: 5px;
+    left: 10px;
+    height: 50px;
+    width: 50px;
 }
 
 @keyframes blobby {
@@ -58,8 +44,8 @@ header {
             top: 0;
             z-index: 8;
             width: 100%;
-            background: white;
-            color: black;
+            background: $primary-bg-color;
+            color: white;
         }
     }
 }
