--- a/src/components/atoms/scrolledBanner.scss
+++ b/src/components/atoms/scrolledBanner.scss
@@ -17,7 +17,7 @@
         color: white;
     }
     &-light {
-        background: white;
+        background: none;
         color: black;
     }
 }
