--- a/src/index.scss
+++ b/src/index.scss
@@ -141,12 +141,6 @@ table {
 
 body {
     background: $primary-bg-color;
-    background-image: url('./assets/videos/blue-waves.mp4');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: top center;
-    background-blend-mode: normal;
     font-family: Comfortaa;
     color: white;
     height: 100vh;
@@ -157,7 +151,7 @@ body {
 }
 
 .light {
-    background: white;
+    background: none;
     font-family: Comfortaa;
     color: black;
     animation-name: fadeIn 300ms both;
@@ -259,7 +253,7 @@ a {
             top: 0;
             z-index: 8;
             width: 100%;
-            background: white;
+            background: none;
             color: black;
         }
     }
