--- a/src/index.scss
+++ b/src/index.scss
@@ -155,6 +155,12 @@ body {
     font-family: Comfortaa;
     color: black;
     animation-name: fadeIn 300ms both;
+    header {
+        background-color: $primary-bg-color;
+    }
+}
+
+.light {
 }
 
 a {
