--- a/src/components/atoms/gameEnnemy.scss
+++ b/src/components/atoms/gameEnnemy.scss
@@ -17,6 +17,10 @@
         height: 70px;
         transform: rotate(180deg);
     }
+    p {
+        width: 400%;
+        font-size: 16px;
+    }
 }
 
 .enemy-shield {
@@ -56,7 +60,7 @@
     position: absolute;
     background-size: cover;
     opacity: 0;
-    animation: sprite-animation 600ms forwards ease-in-out;
+    animation: sprite-animation 500ms forwards ease-in-out;
 }
 
 @keyframes sprite-animation {
