--- a/src/components/molecules/navbar.scss
+++ b/src/components/molecules/navbar.scss
@@ -64,6 +64,22 @@
     color: white;
     padding: 10px;
 }
+.play-game-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: black;
+    background-color: $primary-border-color;
+    width: 200px;
+    height: 50px;
+    padding: 5px;
+    font-family: Comfortaa;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border: none;
+}
 
 .fa-chevron-down {
     margin-left: 30px;
